package com.github.FishMiner.domain.ecs.components;

import com.badlogic.ashley.core.Component;

public class SinkerComponent implements Component {
    public String name = "Sinker";
    public int price;
    public float weight;
}
