package com.github.FishMiner.domain.ecs.components;

import com.badlogic.ashley.core.Component;

public class StoreUIComponent implements Component {
    // Empty tag component used to mark entities as part of the store UI
}
