package com.github.FishMiner.domain.ecs.components;

import com.badlogic.ashley.core.Component;

public class WeightComponent implements Component {
    public float weight;
}

