@startuml ecs_logical_view
skinparam classAttributeIconSize 0
title ECS Logical View
class HookSystem <<system>>
class FishingSystem <<system>>
class HookInputSystem <<system>>
class CollisionSystem <<system>>
class MovementSystem <<system>>
class AnimationSystem <<system>>
class AttachmentSystem <<system>>
class RenderingSystem <<system>>
class RotationSystem <<system>>
class UpgradeSystem <<system>>
class PhysicalSystem <<system>>
class BackgroundRenderSystem <<system>>
class ScoreSystem <<system>>
class TransactionSystem <<system>>
class StoreSystem <<system>>
class SpawningQueueSystem <<system>>
class TransformComponent <<component>>
class HookComponent <<component>>
class StateComponent <<component>>
class VelocityComponent <<component>>
class AnimationComponent <<component>>
class RotationComponent <<component>>
class BoundsComponent <<component>>
class AttachmentComponent <<component>>
class ReelComponent <<component>>
class WeightComponent <<component>>
class FishableComponent <<component>>
class ScoreComponent <<component>>
class SharkComponent <<component>>
class TraderComponent <<component>>
class UpgradeComponent <<component>>
class TextureComponent <<component>>
class InventoryComponent <<component>>
class StoreUIComponent <<component>>
class PlayerComponent <<component>>
class SinkerComponent <<component>>
HookSystem --> HookComponent
HookSystem --> TransformComponent
HookSystem --> RotationComponent
HookSystem --> VelocityComponent
HookSystem --> StateComponent
HookSystem --> BoundsComponent
HookSystem --> AttachmentComponent
HookSystem --> ReelComponent
HookSystem --> WeightComponent
FishingSystem --> HookComponent
FishingSystem --> TransformComponent
FishingSystem --> RotationComponent
FishingSystem --> StateComponent
FishingSystem --> AttachmentComponent
FishingSystem --> FishableComponent
HookInputSystem --> StateComponent
CollisionSystem --> HookComponent
CollisionSystem --> TransformComponent
CollisionSystem --> StateComponent
CollisionSystem --> BoundsComponent
CollisionSystem --> FishableComponent
MovementSystem --> TransformComponent
MovementSystem --> VelocityComponent
MovementSystem --> StateComponent
AnimationSystem --> AnimationComponent
AnimationSystem --> StateComponent
AttachmentSystem --> AttachmentComponent
AttachmentSystem --> TransformComponent
RenderingSystem --> TransformComponent
RenderingSystem --> TextureComponent
RenderingSystem --> AnimationComponent
RenderingSystem --> VelocityComponent
RenderingSystem --> RotationComponent
RotationSystem --> TransformComponent
RotationSystem --> HookComponent
RotationSystem --> StateComponent
UpgradeSystem --> UpgradeComponent
UpgradeSystem --> TransformComponent
PhysicalSystem --> TransformComponent
PhysicalSystem --> BoundsComponent
ScoreSystem --> FishableComponent
ScoreSystem --> TransformComponent
ScoreSystem --> ScoreComponent
ScoreSystem --> SharkComponent
ScoreSystem --> StateComponent
TransactionSystem --> TraderComponent
TransactionSystem --> StateComponent
TransactionSystem --> ScoreComponent
TransactionSystem --> PlayerComponent
TransactionSystem --> TransformComponent
TransactionSystem --> UpgradeComponent
TransactionSystem --> InventoryComponent
TransactionSystem --> HookComponent
TransactionSystem --> SinkerComponent
TransactionSystem --> ReelComponent
StoreSystem --> TraderComponent
StoreSystem --> TransformComponent
StoreSystem --> StoreUIComponent
SpawningQueueSystem --> FishableComponent
SpawningQueueSystem --> TransformComponent
SpawningQueueSystem --> VelocityComponent
@enduml